--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -98,63 +98,21 @@ jobs:
         if [[ "$RUNNER_OS" == "Windows" ]]; then
             archive=$dist_dir/$name.zip
             7z a $archive *
-            echo "archive=dist/$name.zip" >> $GITHUB_OUTPUT
+            echo "archive=dist/$name.zip" >> $ARCHIVE
         else
             archive=$dist_dir/$name.tar.gz
             tar -czf $archive *
-            echo "archive=dist/$name.tar.gz" >> $GITHUB_OUTPUT
+            echo "archive=dist/$name.tar.gz" >> $ARCHIVE
         fi
+        
+        echo FILE=${ARCHIVE} >> ${GITHUB_ENV}
+        echo TAG_NAME=latest >> ${GITHUB_ENV}
 
-    - name: Publish Archive
+        
+    - name: Create release
+      if: github.event_name != 'pull_request' && matrix.custom != 'onlyci'
       uses: softprops/action-gh-release@v1
-      if: ${{ startsWith(github.ref, 'refs/tags/') }}
       with:
-        draft: false
-        files: ${{ steps.package.outputs.archive }}
-        prerelease: ${{ steps.check-tag.outputs.rc == 'true' }}
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  docker:
-    name: Publish to Docker Hub
-    if: startsWith(github.ref, 'refs/tags/')
-    runs-on: ubuntu-latest
-    needs: release
-    steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          build-args: |
-            REPO=${{ github.repository }}
-            VER=${{ github.ref_name }}
-          platforms: |
-            linux/amd64
-            linux/arm64
-            linux/386
-            linux/arm/v7
-          push: ${{ needs.release.outputs.rc == 'false' }}
-          tags: ${{ github.repository }}:latest, ${{ github.repository }}:${{ github.ref_name }}
-
-  publish-crate:
-    name: Publish to crates.io
-    if: ${{ needs.release.outputs.rc == 'false' }}
-    runs-on: ubuntu-latest
-    needs: release
-    steps:
-      - uses: actions/checkout@v3
-
-      - uses: dtolnay/rust-toolchain@stable
-
-      - name: Publish
-        env:
-          CARGO_REGISTRY_TOKEN: ${{ secrets.CRATES_IO_API_TOKEN }}
-        run: cargo publish
+        tag_name: ${{env.TAG_NAME}}
+        files: |
+          ${{env.FILE}}
