--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,6 +17,10 @@ jobs:
     strategy:
       matrix:
         include:
+        - target: x86_64-unknown-linux-musl
+          os: ubuntu-latest
+          use-cross: true
+          cargo-flags: ""
         - target: mipsel-unknown-linux-musl
           os: ubuntu-latest
           use-cross: true
@@ -85,7 +89,8 @@ jobs:
         bin=${GITHUB_REPOSITORY##*/}
         dist_dir=`pwd`/dist
         name=$bin-$version-$target
-        executable=target/$target/release/$bin
+        executable=target/$target/release/$bin.$target
+        mv target/$target/release/$bin target/$target/release/$bin.$target
        
         echo FILE=$executable >> ${GITHUB_ENV}
         echo TAG_NAME=latest >> ${GITHUB_ENV}
