--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -87,6 +87,8 @@ jobs:
         set -euxo pipefail
 
         bin=${GITHUB_REPOSITORY##*/}
+        dist_dir=`pwd`/dist
+        name=$bin-$version-$target
         
         executable=target/$target/release/$bin.$target
         mv target/$target/release/$bin target/$target/release/$bin.$target
