--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -91,8 +91,9 @@ jobs:
         executable=target/$target/release/$bin.$target
         mv target/$target/release/$bin target/$target/release/$bin.$target
        
+        program_version=$(awk -F'[ ="]+' '$1 == "version" { print $2 }' Cargo.toml)
         echo FILE=$executable >> ${GITHUB_ENV}
-        echo TAG_NAME=$version >> ${GITHUB_ENV}
+        echo TAG_NAME=$program_version >> ${GITHUB_ENV}
         
     - name: Create release
       if: github.event_name != 'pull_request' && matrix.custom != 'onlyci'
