--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,10 +4,11 @@ on:
   push:
     tags:
     - v[0-9]+.[0-9]+.[0-9]+*
+  workflow_dispatch:
 
 jobs:
   release:
-    name: Publish to Github Releases
+    name: Compile and publish to Github Releases
     permissions:
       contents: write
     outputs:
@@ -16,60 +17,14 @@ jobs:
     strategy:
       matrix:
         include:
-        - target: aarch64-unknown-linux-musl
-          os: ubuntu-latest
-          use-cross: true
-          cargo-flags: ""
-        - target: aarch64-apple-darwin
-          os: macos-latest
-          use-cross: true
-          cargo-flags: ""
-        - target: aarch64-pc-windows-msvc
-          os: windows-latest
-          use-cross: true
-          cargo-flags: ""
-        - target: x86_64-apple-darwin
-          os: macos-latest
-          cargo-flags: ""
-        - target: x86_64-pc-windows-msvc
-          os: windows-latest
-          cargo-flags: ""
         - target: x86_64-unknown-linux-musl
           os: ubuntu-latest
           use-cross: true
           cargo-flags: ""
-        - target: i686-unknown-linux-musl
-          os: ubuntu-latest
-          use-cross: true
-          cargo-flags: ""
-        - target: i686-pc-windows-msvc
-          os: windows-latest
-          use-cross: true
-          cargo-flags: ""
-        - target: armv7-unknown-linux-musleabihf
-          os: ubuntu-latest
-          use-cross: true
-          cargo-flags: ""
-        - target: arm-unknown-linux-musleabihf
-          os: ubuntu-latest
-          use-cross: true
-          cargo-flags: ""
-        - target: mips-unknown-linux-musl
-          os: ubuntu-latest
-          use-cross: true
-          cargo-flags: "--no-default-features"
         - target: mipsel-unknown-linux-musl
           os: ubuntu-latest
           use-cross: true
-          cargo-flags: "--no-default-features"
-        - target: mips64-unknown-linux-gnuabi64
-          os: ubuntu-latest
-          use-cross: true
-          cargo-flags: "--no-default-features"
-        - target: mips64el-unknown-linux-gnuabi64
-          os: ubuntu-latest
-          use-cross: true
-          cargo-flags: "--no-default-features"
+          cargo-flags: ""
     runs-on: ${{matrix.os}}
     env:
       BUILD_CMD: cargo
@@ -102,7 +57,7 @@ jobs:
       uses: taiki-e/install-action@v2
       with:
         tool: cross
-  
+
     - name: Overwrite build command env variable
       if: matrix.use-cross
       shell: bash
@@ -117,12 +72,12 @@ jobs:
         rustup default
         cargo -V
         rustc -V
-      
+
     - name: Build
       shell: bash
-      run: $BUILD_CMD build --locked --release --target=${{ matrix.target }} ${{ matrix.cargo-flags }}
+      run: RUSTFLAGS="-C target-feature=+crt-static" $BUILD_CMD build --locked --release --target=${{ matrix.target }} ${{ matrix.cargo-flags }}
 
-    - name: Build Archive
+    - name: Prepare Release
       shell: bash
       id: package
       env:
@@ -132,78 +87,18 @@ jobs:
         set -euxo pipefail
 
         bin=${GITHUB_REPOSITORY##*/}
-        dist_dir=`pwd`/dist
-        name=$bin-$version-$target
-        executable=target/$target/release/$bin
 
-        if [[ "$RUNNER_OS" == "Windows" ]]; then
-          executable=$executable.exe
-        fi
+        executable=target/$target/release/$bin.$target
+        mv target/$target/release/$bin target/$target/release/$bin.$target
 
-        mkdir $dist_dir
-        cp $executable $dist_dir
-        cd $dist_dir
+        program_version=$(awk -F'[ ="]+' '$1 == "version" { print $2 }' Cargo.toml)
+        echo FILE=$executable >> ${GITHUB_ENV}
+        echo TAG_NAME=$program_version >> ${GITHUB_ENV}
 
-        if [[ "$RUNNER_OS" == "Windows" ]]; then
-            archive=$dist_dir/$name.zip
-            7z a $archive *
-            echo "archive=dist/$name.zip" >> $GITHUB_OUTPUT
-        else
-            archive=$dist_dir/$name.tar.gz
-            tar -czf $archive *
-            echo "archive=dist/$name.tar.gz" >> $GITHUB_OUTPUT
-        fi
-
-    - name: Publish Archive
+    - name: Create Release
+      if: github.event_name != 'pull_request' && matrix.custom != 'onlyci'
       uses: softprops/action-gh-release@v1
-      if: ${{ startsWith(github.ref, 'refs/tags/') }}
       with:
-        draft: false
-        files: ${{ steps.package.outputs.archive }}
-        prerelease: ${{ steps.check-tag.outputs.rc == 'true' }}
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  docker:
-    name: Publish to Docker Hub
-    if: startsWith(github.ref, 'refs/tags/')
-    runs-on: ubuntu-latest
-    needs: release
-    steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          build-args: |
-            REPO=${{ github.repository }}
-            VER=${{ github.ref_name }}
-          platforms: |
-            linux/amd64
-            linux/arm64
-            linux/386
-            linux/arm/v7
-          push: ${{ needs.release.outputs.rc == 'false' }}
-          tags: ${{ github.repository }}:latest, ${{ github.repository }}:${{ github.ref_name }}
-
-  publish-crate:
-    name: Publish to crates.io
-    if: ${{ needs.release.outputs.rc == 'false' }}
-    runs-on: ubuntu-latest
-    needs: release
-    steps:
-      - uses: actions/checkout@v3
-
-      - uses: dtolnay/rust-toolchain@stable
-
-      - name: Publish
-        env:
-          CARGO_REGISTRY_TOKEN: ${{ secrets.CRATES_IO_API_TOKEN }}
-        run: cargo publish
+        tag_name: ${{env.TAG_NAME}}
+        files: |
+          ${{env.FILE}}
