--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -88,7 +88,7 @@ jobs:
 
         bin=${GITHUB_REPOSITORY##*/}
 
-        executable=target/$target/release/$bin.$target_static
+        executable=target/$target/release/$bin.$target.static
         mv target/$target/release/$bin target/$target/release/$bin.$target
 
         program_version=$(awk -F'[ ="]+' '$1 == "version" { print $2 }' Cargo.toml)
